Outlier cleaning works

--- a/demo/feature_overview/feature_overview.ipynb
+++ b/demo/feature_overview/feature_overview.ipynb
@@ -119,22 +119,56 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-14 15:46:57 INFO  Running instrumented original pipeline...\n",
-      "2022-10-14 15:46:57 INFO  Importing libraries and monkey-patching them... (Imports are slow if not in sys.modules cache yet!)\n",
-      "2022-10-14 15:46:57 INFO  ---RUNTIME: Importing and monkey-patching took 218.49417686462402 ms\n",
-      "2022-10-14 15:46:59 INFO  ---RUNTIME: Original pipeline execution took 1304.999828338623 ms (excluding imports and monkey-patching)\n",
-      "2022-10-14 15:46:59 INFO  Starting execution of 1 what-if analyses...\n",
-      "2022-10-14 15:46:59 INFO  Start plan generation for analysis CleanLearn...\n",
-      "2022-10-14 15:46:59 INFO  ---RUNTIME: Plan generation took 0.5648136138916016 ms\n",
-      "2022-10-14 15:46:59 INFO  Estimated runtime of original DAG is 1261.9118690490723ms\n",
-      "2022-10-14 15:46:59 INFO  Performing Multi-Query Optimization\n",
-      "2022-10-14 15:46:59 INFO  Estimated unoptimized what-if runtime is 2523.8237380981445ms\n",
-      "2022-10-14 15:46:59 INFO  Estimated optimised what-if runtime is 1417.184829711914ms\n",
-      "2022-10-14 15:46:59 INFO  Estimated optimisation runtime saving is 1106.6389083862305ms\n",
-      "2022-10-14 15:46:59 INFO  ---RUNTIME: Multi-Query Optimization took 12.526988983154297 ms\n",
-      "2022-10-14 15:46:59 INFO  Executing generated plans\n",
-      "2022-10-14 15:47:00 INFO  ---RUNTIME: Execution took 1372.3456859588623 ms\n",
-      "2022-10-14 15:47:00 INFO  Done!\n"
+      "2022-10-14 16:44:23 INFO  Running instrumented original pipeline...\n",
+      "2022-10-14 16:44:23 INFO  Importing libraries and monkey-patching them... (Imports are slow if not in sys.modules cache yet!)\n",
+      "2022-10-14 16:44:23 INFO  ---RUNTIME: Importing and monkey-patching took 169.7399616241455 ms\n",
+      "2022-10-14 16:44:24 INFO  ---RUNTIME: Original pipeline execution took 1189.0897750854492 ms (excluding imports and monkey-patching)\n",
+      "2022-10-14 16:44:24 INFO  Starting execution of 1 what-if analyses...\n",
+      "2022-10-14 16:44:24 INFO  Start plan generation for analysis CleanLearn...\n",
+      "2022-10-14 16:44:24 INFO  ---RUNTIME: Plan generation took 0.20623207092285156 ms\n",
+      "2022-10-14 16:44:24 INFO  Estimated runtime of original DAG is 1149.0814685821533ms\n",
+      "2022-10-14 16:44:24 INFO  Performing Multi-Query Optimization\n",
+      "2022-10-14 16:44:24 INFO  Estimated unoptimized what-if runtime is 2298.1629371643066ms\n",
+      "2022-10-14 16:44:24 INFO  Estimated optimised what-if runtime is 1246.1719512939453ms\n",
+      "2022-10-14 16:44:24 INFO  Estimated optimisation runtime saving is 1051.9909858703613ms\n",
+      "2022-10-14 16:44:24 INFO  ---RUNTIME: Multi-Query Optimization took 9.544134140014648 ms\n",
+      "2022-10-14 16:44:24 INFO  Executing generated plans\n",
+      "2022-10-14 16:44:25 INFO  ---RUNTIME: Execution took 930.3381443023682 ms\n",
+      "2022-10-14 16:44:25 INFO  Done!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            weight\n",
+      "0         0.000000\n",
+      "1        77.739653\n",
+      "2     60000.000000\n",
+      "3        58.510919\n",
+      "4         0.000000\n",
+      "...            ...\n",
+      "3905     60.046978\n",
+      "3906  60000.000000\n",
+      "3907     79.650130\n",
+      "3908  60000.000000\n",
+      "3909  60000.000000\n",
+      "\n",
+      "[3910 rows x 1 columns]\n",
+      "         weight\n",
+      "0     70.000000\n",
+      "1     77.739653\n",
+      "2     70.000000\n",
+      "3     58.510919\n",
+      "4     70.000000\n",
+      "...         ...\n",
+      "3905  60.046978\n",
+      "3906  70.000000\n",
+      "3907  79.650130\n",
+      "3908  70.000000\n",
+      "3909  70.000000\n",
+      "\n",
+      "[3910 rows x 1 columns]\n"
      ]
     }
    ],
@@ -144,7 +178,11 @@
     "warnings.filterwarnings('ignore')  # To keep the output readable\n",
     "\n",
     "\n",
-    "cleanlearn = CleanLearn(column=\"weight\", error=ErrorType.OUTLIER, constant=70, cleanings=[Clean.FILTER, Clean.IMPUTE])\n",
+    "cleanlearn = CleanLearn(column=\"weight\",\n",
+    "                        error=ErrorType.OUTLIER,\n",
+    "                        cleanings=[Clean.FILTER, Clean.IMPUTE],\n",
+    "                        outlier_func=lambda y: (y > 120) | (y < 30),\n",
+    "                        impute_constant=70)\n",
     "\n",
     "analysis_result = PipelineAnalyzer \\\n",
     "    .on_pipeline_from_py_file(DEMO_PY) \\\n",
@@ -175,8 +213,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "  corrupted_column     error cleaning_method  accuracy_score_L70\n0             None      None            None            0.748017\n1           weight  outliers          filter            0.748017\n2           weight  outliers          impute            0.748017",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>corrupted_column</th>\n      <th>error</th>\n      <th>cleaning_method</th>\n      <th>accuracy_score_L70</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>None</td>\n      <td>None</td>\n      <td>None</td>\n      <td>0.748017</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>weight</td>\n      <td>outliers</td>\n      <td>filter</td>\n      <td>0.748017</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>weight</td>\n      <td>outliers</td>\n      <td>impute</td>\n      <td>0.748017</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "  corrupted_column     error cleaning_method  accuracy_score_L70\n0             None      None            None            0.754220\n1           weight  outliers          filter            0.800719\n2           weight  outliers          impute            0.808440",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>corrupted_column</th>\n      <th>error</th>\n      <th>cleaning_method</th>\n      <th>accuracy_score_L70</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>None</td>\n      <td>None</td>\n      <td>None</td>\n      <td>0.754220</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>weight</td>\n      <td>outliers</td>\n      <td>filter</td>\n      <td>0.800719</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>weight</td>\n      <td>outliers</td>\n      <td>impute</td>\n      <td>0.808440</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 4,
      "metadata": {},
@@ -208,22 +246,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-14 15:47:00 INFO  Running instrumented original pipeline...\n",
-      "2022-10-14 15:47:00 INFO  Importing libraries and monkey-patching them... (Imports are slow if not in sys.modules cache yet!)\n",
-      "2022-10-14 15:47:00 INFO  ---RUNTIME: Importing and monkey-patching took 10.010957717895508 ms\n",
-      "2022-10-14 15:47:01 INFO  ---RUNTIME: Original pipeline execution took 905.5700302124023 ms (excluding imports and monkey-patching)\n",
-      "2022-10-14 15:47:01 INFO  Starting execution of 1 what-if analyses...\n",
-      "2022-10-14 15:47:01 INFO  Start plan generation for analysis PermutationFeatureImportance...\n",
-      "2022-10-14 15:47:01 INFO  ---RUNTIME: Plan generation took 0.16307830810546875 ms\n",
-      "2022-10-14 15:47:01 INFO  Estimated runtime of original DAG is 864.1781806945801ms\n",
-      "2022-10-14 15:47:01 INFO  Performing Multi-Query Optimization\n",
-      "2022-10-14 15:47:01 INFO  Estimated unoptimized what-if runtime is 2592.5345420837402ms\n",
-      "2022-10-14 15:47:01 INFO  Estimated optimised what-if runtime is 1003.4425258636475ms\n",
-      "2022-10-14 15:47:01 INFO  Estimated optimisation runtime saving is 1589.0920162200928ms\n",
-      "2022-10-14 15:47:01 INFO  ---RUNTIME: Multi-Query Optimization took 9.316682815551758 ms\n",
-      "2022-10-14 15:47:01 INFO  Executing generated plans\n",
-      "2022-10-14 15:47:02 INFO  ---RUNTIME: Execution took 1070.5480575561523 ms\n",
-      "2022-10-14 15:47:02 INFO  Done!\n"
+      "2022-10-14 16:44:25 INFO  Running instrumented original pipeline...\n",
+      "2022-10-14 16:44:25 INFO  Importing libraries and monkey-patching them... (Imports are slow if not in sys.modules cache yet!)\n",
+      "2022-10-14 16:44:25 INFO  ---RUNTIME: Importing and monkey-patching took 7.172822952270508 ms\n",
+      "2022-10-14 16:44:26 INFO  ---RUNTIME: Original pipeline execution took 898.3132839202881 ms (excluding imports and monkey-patching)\n",
+      "2022-10-14 16:44:26 INFO  Starting execution of 1 what-if analyses...\n",
+      "2022-10-14 16:44:26 INFO  Start plan generation for analysis PermutationFeatureImportance...\n",
+      "2022-10-14 16:44:26 INFO  ---RUNTIME: Plan generation took 0.21195411682128906 ms\n",
+      "2022-10-14 16:44:26 INFO  Estimated runtime of original DAG is 861.990213394165ms\n",
+      "2022-10-14 16:44:26 INFO  Performing Multi-Query Optimization\n",
+      "2022-10-14 16:44:26 INFO  Estimated unoptimized what-if runtime is 2585.970640182495ms\n",
+      "2022-10-14 16:44:26 INFO  Estimated optimised what-if runtime is 1002.7487277984619ms\n",
+      "2022-10-14 16:44:26 INFO  Estimated optimisation runtime saving is 1583.2219123840332ms\n",
+      "2022-10-14 16:44:26 INFO  ---RUNTIME: Multi-Query Optimization took 10.59722900390625 ms\n",
+      "2022-10-14 16:44:26 INFO  Executing generated plans\n",
+      "2022-10-14 16:44:27 INFO  ---RUNTIME: Execution took 986.1569404602051 ms\n",
+      "2022-10-14 16:44:27 INFO  Done!\n"
      ]
     }
    ],
@@ -269,7 +307,7 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/1x/7tjtf92157d00yflbr4s67f80000gn/T/ipykernel_15715/3756139148.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      7\u001B[0m \u001B[0manalysis_result\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mPipelineAnalyzer\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      8\u001B[0m     \u001B[0;34m.\u001B[0m\u001B[0mon_pipeline_from_py_file\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mDEMO_PY\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 9\u001B[0;31m     \u001B[0;34m.\u001B[0m\u001B[0madd_what_if_analysis\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mrobustness\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     10\u001B[0m     \u001B[0;34m.\u001B[0m\u001B[0madd_custom_monkey_patching_module\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcustom_monkeypatching\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     11\u001B[0m     \u001B[0;34m.\u001B[0m\u001B[0mexecute\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/var/folders/1x/7tjtf92157d00yflbr4s67f80000gn/T/ipykernel_17126/3756139148.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      7\u001B[0m \u001B[0manalysis_result\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mPipelineAnalyzer\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      8\u001B[0m     \u001B[0;34m.\u001B[0m\u001B[0mon_pipeline_from_py_file\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mDEMO_PY\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 9\u001B[0;31m     \u001B[0;34m.\u001B[0m\u001B[0madd_what_if_analysis\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mrobustness\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     10\u001B[0m     \u001B[0;34m.\u001B[0m\u001B[0madd_custom_monkey_patching_module\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcustom_monkeypatching\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     11\u001B[0m     \u001B[0;34m.\u001B[0m\u001B[0mexecute\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
       "\u001B[0;31mNameError\u001B[0m: name 'robustness' is not defined"
      ]
     }
