--- a/demo/feature_overview/feature_overview.ipynb
+++ b/demo/feature_overview/feature_overview.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "To conduct our what-if analyses, we do not need to rewrite this pipeline file, we can use it directly as input for mlwhatif.\n",
     "\n",
-    "We use two what-if analyses. The first one is `CleanLearn`. We want to try two different cleaning approaches for outliers on our test data. In addition, we will use the what-if analysis `OperatorImpact` to understand the impact of certain operators in our pipeline, the standard scaling for `weight`, and the model."
+    "We use two what-if analyses. The first one is `CleanLearn`. We want to try two different cleaning approaches for outliers on our test data, dropping and imputing outliers. In addition, we will use the what-if analysis `OperatorImpact` to understand the impact of certain operators in our pipeline, the standard scaling for `weight`, and the model."
    ]
   },
   {
