--- a/demo/feature_overview/feature_overview.ipynb
+++ b/demo/feature_overview/feature_overview.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Feature Overview\n",
-    "To demonstrate the features of mlwhatif, we will use the running example from the paper. This pipeline predicts which patients are at a higher risk of serious complications. The pipeline is implemented using native constructs from the popular pandas and scikit-learn libraries."
+    "To demonstrate the features of mlwhatif, we will use the running example from the paper. This pipeline from the healthcare domain predicts which patients are at a higher risk of serious complications. The pipeline is implemented using native constructs from the popular pandas and scikit-learn libraries."
    ]
   },
   {
