--- a/demo/feature_overview/feature_overview.ipynb
+++ b/demo/feature_overview/feature_overview.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "We use two what-if analyses. The first one is `CleanLearn`. We want to try two different cleaning approaches for outliers on our test data, dropping and imputing outliers. In addition, we will use the what-if analysis `OperatorImpact` to understand the impact of certain operators in our pipeline, the standard scaling for `weight`, and the model.\n",
     "\n",
-    "The central entry point of mlwhatif is the `PipelineAnalyzer`. To use mlwhatif, we use it and pass it the path to the runnable version of the example pipeline. Here, we have the example pipeline in a healthcare.py file, but e.g., `.ipynb` jupyter notebook files are supported, too. Then, we define the set of what-if analyses we want mlwhatif to run. Then, we execute the pipeline. Mlwhatif returns a `AnalysisResults` object, which contains the output of our what-if analyses. The API is very close to the mlinspect API, which is what the mlwhatif implementation is based on."
+    "The central entry point of mlwhatif is the `PipelineAnalyzer`. To use mlwhatif, we use it and pass it the path to the runnable version of the example pipeline. Here, we have the example pipeline in a healthcare.py file, but e.g., `.ipynb` jupyter notebook files are supported, too. Then, we define the set of what-if analyses we want mlwhatif to run. Then, we execute the pipeline. Mlwhatif returns a `AnalysisResults` object, which contains the output of our what-if analyses. This API is very close to the mlinspect API, because the mlwhatif implementation is based on mlinspect."
    ]
   },
   {
