--- a/demo/feature_overview/feature_overview.ipynb
+++ b/demo/feature_overview/feature_overview.ipynb
@@ -279,12 +279,12 @@
    "source": [
     "Next, we look at the optimised plan mlwhatif generated. The plan combines the computation for all the variants. Thanks to our multi-query optimisation, it is still somewhat comparable in size to the original plan.\n",
     "When looking closely at the plan, we can find the four patches introduced by the two what-if analyses. In the following, we list the operator identifier numbers for the operators created by our patches.\n",
-    "* Pipeline Variant 1: An outlier filter was added for this variant. -> Operator 38.\n",
+    "* Pipeline Variant 1: An outlier filter was added for this variant. -> Operator 38\n",
     "* Pipeline Variant 2: An outlier replacement operator was added for this variant. -> Operator 40\n",
     "* Pipeline Variant 3: Standard Scaling was replaced with Robust scaling for this variant. -> Operator 42\n",
     "* Pipeline Variant 4: The Neural Network was replaced with Logistic Regression for this variant. -> Operator 44\n",
     "\n",
-    "For each of the variants, we can see one separate score operation at the bottom of the plan, with the operator identifiers 56, 63, 73, and 77."
+    "For each of the variants, we can see one separate score operation at the bottom of the plan, with the operator identifiers 56, 63, 73, and 77. Thanks to our multi-query optimisation rules, mlwhatif succesfully reuses the results from the relational preprocessing for all variants, reuses the trained neural network for the variants that only patch the test branch, and reuses already featurized columns where possible."
    ]
   },
   {
