--- a/demo/feature_overview/feature_overview.ipynb
+++ b/demo/feature_overview/feature_overview.ipynb
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we look at the optimised plan mlwhatif generated. The plan combines the computation for all the variants. Thanks to our multi-query optimisation, it is still somewhat comparable in size to the original plan.\n",
+    "Next, we look at the optimised plan mlwhatif generated. The plan combines the computation for all the variants. Thanks to our multi-query optimisation, the size of the plan is much smaller than the size of the original plan times four.\n",
     "When looking closely at the plan, we can find the four patches introduced by the two what-if analyses. In the following, we list the operator identifier numbers for the operators created by our patches.\n",
     "* Pipeline Variant 1: An outlier filter was added for this variant. -> Operator 38\n",
     "* Pipeline Variant 2: An outlier replacement operator was added for this variant. -> Operator 40\n",
