--- a/demo/feature_overview/feature_overview.ipynb
+++ b/demo/feature_overview/feature_overview.ipynb
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see the original plan mlwhatif extracted from the source code. Contrary to the paper, in the implementation, the plans go from top to bottom, so they can be read easier when displayed next to the corresponding source code. The data source operators are at the top of the plan, the final score aggregation is at the bottom. The plan consists of operators like projections, selections, joins, transformers, and the classifier.\n",
+    "Here we see the original plan mlwhatif extracted from the source code. Contrary to the paper, in the implementation, the plans go from top to bottom, so they can be read easier when displayed next to the corresponding source code. The data source operators are at the top of the plan, the final score aggregation is at the bottom. The plan consists of operators like projections, selections, joins, estimator/transformers, and the classifier.\n",
     "\n",
     "Note that we also see the output shape and runtime of each operator."
    ]
